deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node-micro
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: node-micro
    spec:
      containers:
      - name: node-micro
        image: gcr.io/loadmill-142315/node-micro:2.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
