kube-monkey.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-monkey
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-monkey
    spec:
      containers:
        -  name: kube-monkey
           command:
             - "/kube-monkey"
           args: ["-v=5", "-log_dir=/var/log/kube-monkey"]
           image: kube-monkey:v0.1.0
           volumeMounts:
             - name: config-volume
               mountPath: "/etc/kube-monkey"
      volumes:
        - name: config-volume
          configMap:
            name: kube-monkey-config-map
