service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-micro
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    name: node-micro
  type: LoadBalancer
